# teles

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md
cmake/: FindLibuv.cmake  FindMySQLCPP.cmake
libteles/: CMakeLists.txt  config.hpp.in  daemon.cpp  logger.cpp  option_parser.cpp
libteles/include/teles/: daemon.hpp  helpers.hpp  logger.hpp  option_parser.hpp
libteles/proto/: CMakeLists.txt  log.proto
src/: CMakeLists.txt
src/nameserver/: CMakeLists.txt  nameserver.cpp
test/: CMakeLists.txt
test/libteles/: CMakeLists.txt  test_option_parser.cpp
